Fix last linter warnings